samples/_failures_safe/1761600800_543193_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_07b5ce66.c: In function ‘free_graph’:
./samples/SAFE/__tmp_07b5ce66.c:175:17: error: expected ‘;’ at end of input
  175 |             free
      |                 ^
      |                 ;
./samples/SAFE/__tmp_07b5ce66.c:175:13: error: expected declaration or statement at end of input
  175 |             free
      |             ^~~~
./samples/SAFE/__tmp_07b5ce66.c:175:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_07b5ce66.c:175:13: error: expected declaration or statement at end of input
